@@ -1,10 +1,8 @@
-
 package org.odk.collect.android.views;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 
 import org.commcare.dalvik.R;
 import org.javarosa.core.model.FormIndex;
@@ -37,23 +35,21 @@ import android.widget.TextView;
 /**
  * @author carlhartung
  */
-public class ODKView extends ScrollView implements OnLongClickListener, WidgetChangedListener {
+public class ODKView extends ScrollView
+        implements OnLongClickListener, WidgetChangedListener {
 
     // starter random number for view IDs
     private final static int VIEW_ID = 12345;  
     
-    private final static String t = "CLASSNAME";
-    private final static int TEXTSIZE = 21;
-    
-    private Context mContext;
+    private static final String TAG = ODKView.class.getSimpleName();
 
-    private LinearLayout mView;
-    private LinearLayout.LayoutParams mLayout;
-    private ArrayList<QuestionWidget> widgets;
-    private ArrayList<View> dividers;
+    private final LinearLayout mView;
+    private final LinearLayout.LayoutParams mLayout;
+    private final ArrayList<QuestionWidget> widgets;
+    private final ArrayList<View> dividers;
     private ProgressBar mProgressBar;
     
-    private int mQuestionFontsize;
+    private final int mQuestionFontsize;
 
     public final static String FIELD_LIST = "field-list";
     
@@ -65,31 +61,16 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
     private boolean mProgressEnabled;
     
-    String mGroupLabel;
+    private final String mGroupLabel;
 
     /**
      * If enabled, we use dividers between question prompts
      */
     private static final boolean SEPERATORS_ENABLED = false;
 
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt questionPrompt, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl) {
-        this(context, new FormEntryPrompt[] {
-            questionPrompt
-        }, groups, factory, wcl, false);
-    }
-    
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory) {
-        this(context, questionPrompts, groups, factory, null, false);
-    }
-
-
-    public ODKView(Context context, FormEntryPrompt[] questionPrompts, FormEntryCaption[] groups, WidgetFactory factory, WidgetChangedListener wcl, boolean isGroup) {
+    public ODKView(Context context, FormEntryPrompt[] questionPrompts,
+                   FormEntryCaption[] groups, WidgetFactory factory,
+                   WidgetChangedListener wcl) {
         super(context);
         
         if(wcl !=null){
@@ -103,10 +84,8 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         String question_font =
                 settings.getString(PreferencesActivity.KEY_FONT_SIZE, Collect.DEFAULT_FONTSIZE);
 
-        mQuestionFontsize = new Integer(question_font).intValue();
+        mQuestionFontsize = Integer.valueOf(question_font);
         
-        mContext = context;
-
         widgets = new ArrayList<QuestionWidget>();
         dividers = new ArrayList<View>();
 
@@ -114,7 +93,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 
         mView = (LinearLayout) layout.findViewById(R.id.odkview_layout);
         
-        if(PreferencesActivity.getProgressBarMode(mContext) == ProgressBarMode.ProgressOnly) {
+        if(PreferencesActivity.getProgressBarMode(context) == ProgressBarMode.ProgressOnly) {
             this.mProgressEnabled = true;
         }
 
@@ -132,14 +111,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             LinearLayout barView = new LinearLayout(getContext());
             barView.setOrientation(LinearLayout.VERTICAL);
             barView.setGravity(Gravity.BOTTOM);
-            barView.addView((View) mProgressBar);
+            barView.addView(mProgressBar);
             mView.addView(barView, barLayout);
         }
 
         mLayout =
             new LinearLayout.LayoutParams(LinearLayout.LayoutParams.FILL_PARENT,
                     LinearLayout.LayoutParams.WRAP_CONTENT);
-        //mLayout.setMargins(10, 0, 10, 0);
 
         //Figure out if we share hint text between questions
         String hintText = null;
@@ -193,7 +171,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             }
 
             widgets.add(qw);
-            mView.addView((View) qw, mLayout);
+            mView.addView(qw, mLayout);
             
             qw.setChangedListener(this);
         }
@@ -203,7 +181,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         addView(layout);
     }
     
-    public void removeQuestionFromIndex(int i){
+    void removeQuestionFromIndex(int i){
         int dividerIndex = Math.max(i - 1, 0);
 
         if (dividerIndex < dividers.size()) {
@@ -212,7 +190,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (i < widgets.size()) {
-            mView.removeView((View) widgets.get(i));
+            mView.removeView(widgets.get(i));
             widgets.remove(i);
         }
     }
@@ -224,12 +202,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         Collections.reverse(indexes);
         
         for(int i=0; i< indexes.size(); i++){
-            removeQuestionFromIndex(indexes.get(i).intValue());
+            removeQuestionFromIndex(indexes.get(i));
         }
     }
     
     public void addQuestionToIndex(FormEntryPrompt fep, WidgetFactory factory, int i){
-
         View divider = new View(getContext());
         if(SEPERATORS_ENABLED) {
             divider.setBackgroundResource(android.R.drawable.divider_horizontal_bright);
@@ -244,7 +221,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         mView.addView(divider, getViewIndex(dividerIndex));
         dividers.add(Math.max(0, i - 1), divider);
         
-        QuestionWidget qw = factory.createWidgetFromPrompt(fep, getContext());;
+        QuestionWidget qw = factory.createWidgetFromPrompt(fep, getContext());
         qw.setLongClickable(true);
         qw.setOnLongClickListener(this);
         qw.setId(VIEW_ID + widgetIdCount++);
@@ -255,7 +232,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
 //        }
 
         widgets.add(i, qw);
-        mView.addView((View) qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
+        mView.addView(qw, getViewIndex(2 * i + mViewBannerCount), mLayout);
         
         qw.setChangedListener(this);
     }
@@ -276,9 +253,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         return answers;
     }
     
-    /* (non-Javadoc)
-     * @see android.widget.LinearLayout#onMeasure(int, int)
-     */
     @Override
     protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
         int newHeight = MeasureSpec.getSize(heightMeasureSpec);
@@ -292,16 +266,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         
         super.onMeasure(widthMeasureSpec, heightMeasureSpec);
-                
-//        double change = ((this.getMeasuredHeight() * 1.0 - gmh) / this.getMeasuredHeight()); 
-//        System.out.println("Old: " + gmh + ". New: "+ this.getMeasuredHeight() + ". CurrentHeight: " + height);
-//        
-//        if(gmh == -1 || gmh == 0 || change > .2) {
-//            //If the view size change has changed by more than 20% 
-//            if(mHelpText != null) {
-//                mHelpText.updateMaxHeight((this.getMeasuredHeight() - this.getScrollY())/ 3);
-//            }
-//        }
     }
     
     private void updateConstraintRelevancies(){
@@ -326,8 +290,8 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
      * Returns the hierarchy of groups to which the question belongs.
      */
     private String deriveGroupText(FormEntryCaption[] groups) {
-        StringBuffer s = new StringBuffer("");
-        String t = "";
+        StringBuilder s = new StringBuilder("");
+        String t;
         int i;
         // list all groups in one string
         for (FormEntryCaption g : groups) {
@@ -336,7 +300,7 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             if (t != null) {
                 s.append(t);
                 if (g.repeats() && i > 0) {
-                    s.append(" (" + i + ")");
+                    s.append(" (").append(i).append(")");
                 }
                 s.append(" > ");
             }
@@ -354,8 +318,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
     /**
      * Ugh, the coupling here sucks, but this returns the group label
      * to be used for this odk view. 
-     * 
-     * @return
      */
     public String getGroupLabel() {
         return mGroupLabel;
@@ -364,7 +326,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
     private void addHintText(String hintText) {
         if (hintText != null && !hintText.equals("")) {
             TextView mHelpText = new TextView(getContext());
-            mHelpText = new TextView(getContext());
             mHelpText.setTextSize(TypedValue.COMPLEX_UNIT_DIP, mQuestionFontsize - 3);
             mHelpText.setPadding(0, -5, 0, 7);
             // wrap to the widget of view
@@ -376,9 +337,6 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
             mView.addView(mHelpText, mLayout);
         }
     }
-    
-    
-
 
     public void setFocus(Context context) {
         if (widgets.size() > 0) {
@@ -386,14 +344,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     /**
      * Called when another activity returns information to answer this question.
-     * 
-     * @param answer
      */
     public void setBinaryData(Object answer) {
-        
         boolean set = false;
         for (QuestionWidget q : widgets) {
             if (q instanceof IBinaryWidget) {
@@ -406,17 +360,14 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
 
         if (!set) {
-            Log.w(t, "Attempting to return data to a widget or set of widgets not looking for data");
+            Log.w(TAG, "Attempting to return data to a widget or set of widgets not looking for data");
                      
             for (QuestionWidget q : widgets) {
                 if (q instanceof IBinaryWidget) {
                     ((IBinaryWidget) q).setBinaryData(answer);
-                    set = true;
                     break;
                 }
             }
-            
-            
         }
     }
 
@@ -435,16 +386,10 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
     public ArrayList<QuestionWidget> getWidgets() {
         return widgets;
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#setOnFocusChangeListener(android.view.View.OnFocusChangeListener)
-     */
     @Override
     public void setOnFocusChangeListener(OnFocusChangeListener l) {
         for (int i = 0; i < widgets.size(); i++) {
@@ -453,21 +398,11 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View.OnLongClickListener#onLongClick(android.view.View)
-     */
     @Override
     public boolean onLongClick(View v) {
         return false;
     }
     
-
-    /*
-     * (non-Javadoc)
-     * @see android.view.View#cancelLongPress()
-     */
     @Override
     public void cancelLongPress() {
         super.cancelLongPress();
@@ -476,21 +411,13 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
     }
 
-    /*
-     * (non-Javadoc)
-     * @see org.odk.collect.android.listeners.WidgetChangedListener#widgetEntryChanged()
-     */
     @Override
     public void widgetEntryChanged() {
-        
         updateConstraintRelevancies();
-        
         updateLastQuestion();
-        
     }
     
-    public void updateLastQuestion(){
-
+    void updateLastQuestion(){
         StringWidget last = null;
         
         for(QuestionWidget q: widgets){
@@ -533,5 +460,4 @@ public class ODKView extends ScrollView implements OnLongClickListener, WidgetCh
         }
         return questionIndex;
     }
-    
 }
